# Code_learning

./: README.md
C++/Exercices_classes/PointsCoordinates/: CMakeLists.txt  CMakeLists.txt.user.ba65428  graph.cpp  graph.h  main.cpp  point.cpp  point.h
C++/Qt/exemples2/Qt_test_menu_toolbar/: CMakeLists.txt  simple_menu.cpp
C/Projet_stm32/: CMakeLists.txt  main.c
C/Projet_stm32/testOLED/: .mxproject  .project  testOLED.ioc
C/Projet_stm32/testOLED/.metadata/: .log4j2.xml  version.ini
C/Projet_stm32/testOLED/.metadata/.plugins/org.eclipse.cdt.core/: test1.language.settings.xml
C/Projet_stm32/testOLED/.metadata/.plugins/org.eclipse.cdt.ui/: dialog_settings.xml
C/Projet_stm32/testOLED/.metadata/.plugins/org.eclipse.core.resources/.root/: 2.tree
C/Projet_stm32/testOLED/.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
C/Projet_stm32/testOLED/.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
C/Projet_stm32/testOLED/.metadata/.plugins/org.eclipse.ui.ide/: dialog_settings.xml
C/Projet_stm32/testOLED/.metadata/.plugins/org.eclipse.ui.workbench/: dialog_settings.xml  workingsets.xml
C/Projet_stm32/testOLED/.metadata/.plugins/org.eclipse.ui.workbench.texteditor/: dialog_settings.xml
C/Projet_stm32/testOLED/Inc/: u8x8_stm32_HAL.h
C/Projet_stm32/testOLED/STM32CubeIDE/: .cproject  .project  STM32L476RGTX_FLASH.ld  STM32L476RGTX_RAM.ld
C/Projet_stm32/testOLED/Src/: main.c
C/Projet_stm32/testOLED/Src/Backup/: gpio.c.bak  usart.c.bak
C/Projet_stm32/testOLED/test1/: .cproject  test1 Debug.launch  test1.ioc
C/Projet_stm32/testOLED/test1/Core/Inc/: main.h  u8x8_stm32_HAL.h
C/Projet_stm32/testOLED/test1/Core/Src/: main.c  tim.c
C/Projet_stm32/testOLED/test1/Debug/: makefile  objects.list  test1.elf  test1.list  test1.map
C/Solver_plotter_terminal/: CMakeLists.txt  Source.c  solver_plotter
(+833 files in other folders)
